# sandbox-shell

./: .gitignore  .gitleaksignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  sandbox-cli-spec.md
.github/: dependabot.yml
.github/workflows/: QA.yaml  release.yaml  security-scan.yaml
docs/: CONFIGURATION.md  PROFILES.md  SECURITY.md  SHELL_INTEGRATION.md  homebrew-tap-specification.md
profiles/: base.sx  base.toml  bun.toml  claude.toml  go.toml  gpg.toml  localhost.toml  node.toml  online.toml  opencode.toml  python.toml  rust.toml
scripts/: test-security.sh
shell/: sx.bash  sx.fish  sx.zsh
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/config/: global.rs  merge.rs  mod.rs  profile.rs  project.rs  schema.rs
src/detection/: mod.rs  project_type.rs
src/sandbox/: executor.rs  mod.rs  seatbelt.rs  trace.rs  violations.rs
src/shell/: integration.rs  mod.rs  prompt.rs
src/utils/: mod.rs  paths.rs
tests/: cli_test.rs  config_test.rs  detection_test.rs  integration.rs  profile_test.rs  seatbelt_test.rs  shell_test.rs  signal_test.rs
