[package]
name = "sx"
version = "0.2.7"
edition = "2021"
authors = ["Pierre Tomasina"]
description = "Lightweight sandbox for macOS development"
license = "MIT"
repository = "https://github.com/agentic-dev3o/sandbox-shell"
keywords = ["sandbox", "security", "macos", "seatbelt"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# Paths and directories
dirs = "6"
shellexpand = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2"
anyhow = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
